# lingchong-bot

./: .gitignore  Cargo.toml  Justfile  README.md  development.md  devenv.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: channel-harness-migration.md  migration-stages.md  migration.md
scripts/channel/: plan-live.sh  preflight.sh  stage-m4b.sh
src/: cli.rs  gateway.rs  lib.rs  main.rs  turn.rs
src/channels/: discord.rs  mod.rs  session.rs  telegram.rs
src/harness/: discord_acl.rs  discord_ingress.rs  mod.rs  telegram_profile.rs  telegram_session_matrix.rs
src/runtime/: config.rs  live_plan.rs  mod.rs  preflight.rs
tests/: unit_test.rs
tests/unit/: channels.rs  gateway.rs  lib_policy.rs  session.rs  turn.rs
tests/unit/harness/: discord_acl.rs  discord_ingress.rs  mod.rs  telegram_profile.rs  telegram_session_matrix.rs
tests/unit/runtime/: config.rs  live_plan.rs  mod.rs  preflight.rs
