[package]
name = "lingchong-bot"
version = "0.1.0"
edition = "2024"
description = "Telegram and Discord bot runtime surface for the Lingchong project"
authors = ["Xiuxian Artisan Workshop"]
license = "Apache-2.0"
publish = false

[lib]
name = "lingchong_bot"

[[bin]]
name = "lingchong-bot"
path = "src/main.rs"
test = false
bench = false

[dependencies]
pulldown-cmark = "0.13"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "51ca03c55960c008d9280e6b290474645de0b813" }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Performance optimization: Thin LTO keeps release memory lower than full LTO.
[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
